tests/suite/projects/fail/generated/missing_import_15/main.ny
//~ ERROR import not found
import "lib/missing15.ny"

fn main() {
    print(0)
}
